--- a/.env.example
+++ b/.env.example
@@ -58,9 +58,9 @@ MAIL_FROM_NAME="${APP_NAME}"
 
 DADATA_TOKEN=
 DADATA_SECRET=
-DADATA_TIMEOUT=
-DADATA_VERSION=
-DADATA_SUGGESTIONS_API=
+DADATA_TIMEOUT=10
+DADATA_VERSION=4_1
+DADATA_SUGGESTIONS_API=https://suggestions.dadata.ru/suggestions/api
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
